--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Déploiement FTP - Néhémie
+name: Deploy to OVH via FTP
 
 on:
   push:
@@ -10,22 +10,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout du code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Déploiement FTP (modifications uniquement)
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-        with:
-          server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: /www/
-          exclude: |
+    - name: Install dependencies
+      run: |
+        composer install --no-dev --optimize-autoloader
+        php artisan config:cache
+        php artisan route:cache
+        php artisan view:cache
+
+    - name: Deploy via FTP
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      with:
+        server: ${{ secrets.FTP_SERVER }}
+        username: ${{ secrets.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD }}
+        server-dir: /www/ 
+        exclude: |
             **/.git*
             **/.github/*
             **/node_modules/*
             **/vendor/*
             **/tests/*
             **/.env
-          log-level: minimal
-          protocol: ftp
+        log-level: minimal
+        protocol: ftp
